# classy-postgresql

./: classy-postgresql.cabal  fourmolu.yaml  hie.yaml  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: d8l30w7kzk908z6ry9davxi2y5fycwm3-source  pvdbscmd1rsrifal223xi538h34jv0f7-source
nix/: shell.nix
src/: ClassyPostgresql.hs  Prelude.hs
src/Classy/: Postgresql.hs  Prelude.hs
src/Classy/Postgresql/: Control.hs  Sql.hs
test/: Main.hs  Prelude.hs
test/Core/: Person.hs
test/Specs/: App.hs  Basic.hs
