cabal-version: 2.4
name:          classy-postgresql
version:       0.1.0.0
author:        gareth
maintainer:    gareth.stokes@paidright.io

library
  mixins:
    base (Prelude as BasePrelude)
    , base hiding (Prelude)

  exposed-modules:
    Classy.Postgresql

  other-modules:
    Prelude

  build-depends:
    , base == 4.16.1.0
    , bytestring
    , lens
    , mtl
    , postgresql-simple
    , resource-pool
    , text
    , transformers-either

  hs-source-dirs:     src
  default-language:   Haskell2010
