cabal-version: 2.4
name:          classy-postgresql
version:       0.1.0.0
author:        gareth
maintainer:    gareth.stokes@paidright.io

library
  mixins:
    base (Prelude as BasePrelude),
    base hiding (Prelude)

  exposed-modules:
    Classy.Postgresql.Control
    Classy.Postgresql.Sql

  -- Modules included in this library but not exported.
  other-modules:    Prelude
  other-extensions:
    NoImplicitPrelude
    DataKinds
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TemplateHaskell
    TypeOperators

  build-depends:
    , base                 ^>=4.16.1.0
    , bytestring           ^>=0.11.3.0
    , lens
    , mtl                  ^>=2.2.2
    , postgresql-simple
    , resource-pool
    , text                 ^>=1.2.5.0
    , transformers-either

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -fprint-expanded-synonyms -Wall -Werror -Wredundant-constraints
    -Wincomplete-record-updates -Wincomplete-uni-patterns

test-suite classy-postgresql-test
  mixins:
    base (Prelude as BasePrelude),
    base hiding (Prelude)

  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
    Prelude
    Specs.App
    Specs.Basic
    Core.Person

  build-depends:
    , base                 ^>=4.16.1.0
    , bytestring           ^>=0.11.3.0
    , classy-postgresql
    , hspec
    , lens
    , mtl                  ^>=2.2.2
    , postgresql-simple
    , text                 ^>=1.2.5.0
    , transformers-either

  ghc-options:
    -fprint-expanded-synonyms -Werror -Wredundant-constraints
    -Wincomplete-record-updates -Wincomplete-uni-patterns
